style: 统一代码格式并清理无用代码
- 标准化CSS变量声明和字体引用格式
- 移除Login页面未使用的组件导入和表单代码
- 修复路由文件中类型声明和eslint注释
- 格式化resetCss.css文件

--- a/src/style/font.css
+++ b/src/style/font.css
@@ -1,8 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 5042063 */
-  src: url('//at.alicdn.com/t/c/font_5042063_a9rkhn890y7.woff2?t=1760585388652') format('woff2'),
-       url('//at.alicdn.com/t/c/font_5042063_a9rkhn890y7.woff?t=1760585388652') format('woff'),
-       url('//at.alicdn.com/t/c/font_5042063_a9rkhn890y7.ttf?t=1760585388652') format('truetype');
+  src:
+    url("//at.alicdn.com/t/c/font_5042063_a9rkhn890y7.woff2?t=1760585388652") format("woff2"),
+    url("//at.alicdn.com/t/c/font_5042063_a9rkhn890y7.woff?t=1760585388652") format("woff"),
+    url("//at.alicdn.com/t/c/font_5042063_a9rkhn890y7.ttf?t=1760585388652") format("truetype");
 }
 
 .iconfont {
