--- a/src/style/font.css
+++ b/src/style/font.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 5042063 */
-  src: url('//at.alicdn.com/t/c/font_5042063_uzxxf41x47r.woff2?t=1760862891286') format('woff2'),
-       url('//at.alicdn.com/t/c/font_5042063_uzxxf41x47r.woff?t=1760862891286') format('woff'),
-       url('//at.alicdn.com/t/c/font_5042063_uzxxf41x47r.ttf?t=1760862891286') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_5042063_03zdzwhunjun.woff2?t=1760864528940') format('woff2'),
+       url('//at.alicdn.com/t/c/font_5042063_03zdzwhunjun.woff?t=1760864528940') format('woff'),
+       url('//at.alicdn.com/t/c/font_5042063_03zdzwhunjun.ttf?t=1760864528940') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,22 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-kucun:before {
+  content: "\e610";
+}
+
+.icon-yemian:before {
+  content: "\e632";
+}
+
+.icon-gistuceng:before {
+  content: "\e7b5";
+}
+
+.icon-shuxing:before {
+  content: "\e625";
 }
 
 .icon-xiangshangjiantou:before {
