--- a/src/style/var.css
+++ b/src/style/var.css
@@ -1,9 +1,9 @@
 :root {
 }
 .display {
- display: flex;
- align-items: center;
- justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 html.light {
@@ -12,6 +12,13 @@ html.light {
   --menu-item-font-color: #fff;
   --log-bg-color: #fff;
   --log-title-color: #fff;
+  /* questionEdit组件的背景颜色 */
+  --left-panel-bg-color: #fff;
+  --right-panel-bg-color: #fff;
+  --center-panel-bg-color: #fff;
+  --question-title-color: #000;
+  --question-hover-border-color: #dedede;
+  --question-avtive-color:#1677ff;
 }
 
 html.dark {
@@ -20,4 +27,11 @@ html.dark {
   --menu-item-font-color: #fff;
   --log-bg-color: #fff;
   --log-title-color: #fff;
+  /* questionEdit组件的背景颜色 */
+  --left-panel-bg-color: #222;
+  --right-panel-bg-color: #222;
+  --center-panel-bg-color: #222;
+  --question-title-color: #fff;
+  --question-hover-border-color: #dedede;
+  --question-avtive-color:#1677ff;
 }
