--- a/src/style/var.css
+++ b/src/style/var.css
@@ -7,6 +7,7 @@
 }
 
 html.light {
+  --main-text-color:#000;
   --main-color: #1677ff;
   --menu-item-bg-color: #1677ff;
   --menu-item-font-color: #fff;
@@ -28,6 +29,7 @@ html.light {
 }
 
 html.dark {
+  --main-text-color:#fff;
   --main-color: #1677ff;
   --menu-item-bg-color: #1677ff;
   --menu-item-font-color: #fff;
