--- a/src/style/font.css
+++ b/src/style/font.css
@@ -1,8 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 5042063 */
-  src: url('//at.alicdn.com/t/c/font_5042063_n1pv3jug73l.woff2?t=1761749060963') format('woff2'),
-       url('//at.alicdn.com/t/c/font_5042063_n1pv3jug73l.woff?t=1761749060963') format('woff'),
-       url('//at.alicdn.com/t/c/font_5042063_n1pv3jug73l.ttf?t=1761749060963') format('truetype');
+  src:
+    url("//at.alicdn.com/t/c/font_5042063_n1pv3jug73l.woff2?t=1761749060963") format("woff2"),
+    url("//at.alicdn.com/t/c/font_5042063_n1pv3jug73l.woff?t=1761749060963") format("woff"),
+    url("//at.alicdn.com/t/c/font_5042063_n1pv3jug73l.ttf?t=1761749060963") format("truetype");
 }
 
 .iconfont {
