--- a/src/style/font.css
+++ b/src/style/font.css
@@ -1,9 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 5042063 */
-  src:
-    url("//at.alicdn.com/t/c/font_5042063_n1pv3jug73l.woff2?t=1761749060963") format("woff2"),
-    url("//at.alicdn.com/t/c/font_5042063_n1pv3jug73l.woff?t=1761749060963") format("woff"),
-    url("//at.alicdn.com/t/c/font_5042063_n1pv3jug73l.ttf?t=1761749060963") format("truetype");
+  src: url('//at.alicdn.com/t/c/font_5042063_qra2xtr7t9d.woff2?t=1761907188608') format('woff2'),
+       url('//at.alicdn.com/t/c/font_5042063_qra2xtr7t9d.woff?t=1761907188608') format('woff'),
+       url('//at.alicdn.com/t/c/font_5042063_qra2xtr7t9d.ttf?t=1761907188608') format('truetype');
 }
 
 .iconfont {
@@ -12,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-sousuo:before {
+  content: "\e602";
 }
 
 .icon-tongji:before {
