feat(页面): 添加个人中心页面和404页面
- 新增个人中心页面及相关路由配置
- 添加404页面处理未匹配路由
- 提取滚动条样式为公共组件
- 优化页面布局和样式细节

--- a/src/style/font.css
+++ b/src/style/font.css
@@ -1,8 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 5042063 */
-  src: url('//at.alicdn.com/t/c/font_5042063_qra2xtr7t9d.woff2?t=1761907188608') format('woff2'),
-       url('//at.alicdn.com/t/c/font_5042063_qra2xtr7t9d.woff?t=1761907188608') format('woff'),
-       url('//at.alicdn.com/t/c/font_5042063_qra2xtr7t9d.ttf?t=1761907188608') format('truetype');
+  src:
+    url("//at.alicdn.com/t/c/font_5042063_qra2xtr7t9d.woff2?t=1761907188608") format("woff2"),
+    url("//at.alicdn.com/t/c/font_5042063_qra2xtr7t9d.woff?t=1761907188608") format("woff"),
+    url("//at.alicdn.com/t/c/font_5042063_qra2xtr7t9d.ttf?t=1761907188608") format("truetype");
 }
 
 .iconfont {
