style(font): 格式化字体文件URL以提高可读性

--- a/src/style/font.css
+++ b/src/style/font.css
@@ -1,8 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 5042063 */
-  src: url('//at.alicdn.com/t/c/font_5042063_5p37se59c5e.woff2?t=1763993695325') format('woff2'),
-       url('//at.alicdn.com/t/c/font_5042063_5p37se59c5e.woff?t=1763993695325') format('woff'),
-       url('//at.alicdn.com/t/c/font_5042063_5p37se59c5e.ttf?t=1763993695325') format('truetype');
+  src:
+    url("//at.alicdn.com/t/c/font_5042063_5p37se59c5e.woff2?t=1763993695325") format("woff2"),
+    url("//at.alicdn.com/t/c/font_5042063_5p37se59c5e.woff?t=1763993695325") format("woff"),
+    url("//at.alicdn.com/t/c/font_5042063_5p37se59c5e.ttf?t=1763993695325") format("truetype");
 }
 
 .iconfont {
